--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -1,5 +1,5 @@
 .u-section-1 {
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.05)), url("../../images/f2df7ca24cc95a30cce6271266fe34ab2.png");
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.05)), url("../../images/f2df7ca24cc95a30cce6271266fe34ab2.webp");
     background-position: 50% 50%;
 }
 
@@ -10,7 +10,7 @@
 .u-section-1 .u-image-1 {
     width: 257px;
     height: 257px;
-    background-image: url("../../images/20220130_220350_1.png");
+    background-image: url("../../images/20220130_220350_1.webp");
     background-position: 50% 50%;
     margin: 74px auto 0 103px;
 }
@@ -529,7 +529,7 @@
 }
 
 .u-section-4 {
-    background-image: url("../../images/f2df7ca24cc95a30cce6271266fe34ab2.png");
+    background-image: url("../../images/f2df7ca24cc95a30cce6271266fe34ab2.webp");
     background-position: 50% 50%;
 }
 
@@ -1022,7 +1022,7 @@
 
 .u-section-7 {
     min-height: 267px;
-    background-image: url("../../images/f2df7ca24cc95a30cce6271266fe34ab2.png");
+    background-image: url("../../images/f2df7ca24cc95a30cce6271266fe34ab2.webp");
     background-position: 50% 50%;
 }
 
