--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -244,10 +244,18 @@
                 <div class="u-repeater u-repeater-1">
                     <div class="u-container-style u-list-item u-repeater-item">
                         <div class="u-container-layout u-similar-container u-container-layout-1">
+                            <h2 class="u-text u-text-2"> Introduction to Containers w/ Docker, Kubernetes & OpenShift</h2>
+                            <p class="u-text u-text-grey-50 u-text-3">2023 |&nbsp; <a class="class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1>IBM on Coursera</a>
+                                <br>
+                            </p>
+                        </div>
+                    </div>
+                <div class="u-repeater u-repeater-1">
+                    <div class="u-container-style u-list-item u-repeater-item">
+                        <div class="u-container-layout u-similar-container u-container-layout-1">
                             <h2 class="u-text u-text-2"> Computer vision school of&nbsp;3DiVi&nbsp;Inc.</h2>
                             <p class="u-text u-text-grey-50 u-text-3">2020 |&nbsp;<a href="images/3divi_cert.jpg"
                                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1">Certificate</a>
-                                <br>
                             </p>
                         </div>
                     </div>
