--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -218,7 +218,7 @@ type: Person
                 <div class="u-repeater u-repeater-1">
                     <div class="u-container-style u-list-item u-repeater-item">
                         <div class="u-container-layout u-similar-container u-container-layout-1">
-                            <h2 class="u-text u-text-2">Master's degree at Big Data and Machine Learning</h2>
+                            <h2 class="u-text u-text-2">Master's degree at Applied Mathematics</h2>
                             <p class="u-text u-text-grey-50 u-text-2">2021 - 2023</p>
                             <p class="u-text u-text-4">
                                 <a href="https://itmo.ru/ru/"
